# stm32mp135f-dk

./: .gitignore  README.md
firmware/cube/stm32mp135-cube/: .mxproject  stm32mp135-cube.ioc
firmware/cube/stm32mp135-cube/Application/Core/Inc/: RTE_Components.h  etzpc.h  i2c.h  main.h  (+2 more)
firmware/cube/stm32mp135-cube/STM32CubeIDE/: .project
firmware/cube/stm32mp135-cube/STM32CubeIDE/Application/: .cproject  .project
firmware/exam/EX-01-LED/: CMakeLists.txt
firmware/exam/EX-01-LED/src/ap/: ap.c
firmware/exam/EX-01-LED/src/bsp/: bsp.h
firmware/exam/EX-01-LED/src/hw/: hw_def.h
firmware/exam/EX-01-LED/tools/: stm32mp135-debug.cfg
firmware/exam/EX-02-UART/src/ap/: ap.c
firmware/exam/EX-02-UART/src/hw/: hw.c  hw.h  hw_def.h
firmware/exam/EX-03-I2C/src/bsp/: bsp.c
firmware/exam/EX-03-I2C/src/hw/: hw.c  hw.h  hw_def.h
firmware/exam/EX-04-PMIC/: CMakeLists.txt
firmware/exam/EX-04-PMIC/src/hw/: hw.c
firmware/exam/EX-05-DDR/: CMakeLists.txt
firmware/exam/EX-05-DDR/src/bsp/: bsp.c
firmware/exam/EX-06-SDCARD/: CMakeLists.txt
firmware/exam/EX-06-SDCARD/src/bsp/: bsp.c
firmware/exam/EX-06-SDCARD/src/common/: def.h
firmware/exam/EX-06-SDCARD/src/hw/: hw.c  hw.h  hw_def.h
firmware/exam/EX-07-GT911/src/ap/: ap.c
firmware/exam/EX-08-LCD/: .clang-format  CMakeLists.txt
firmware/exam/EX-08-LCD/src/bsp/: bsp.c
firmware/exam/EX-08-LCD/src/hw/: hw.c
firmware/exam/EX-09-USB-CDC/: CMakeLists.txt
firmware/exam/EX-09-USB-CDC/src/bsp/: bsp.h
firmware/exam/EX-09-USB-CDC/src/bsp/device/: stm32mp13xx_hal_conf.h
firmware/exam/EX-09-USB-CDC/src/common/hw/include/: cli_gui.h  ltdc.h  pmic.h
firmware/exam/EX-09-USB-CDC/src/hw/: hw.h  hw_def.h
firmware/exam/EX-09-USB-CDC/src/hw/driver/: ltdc.c
firmware/exam/EX-09-USB-CDC/src/hw/driver/usb/usb_cdc/: usbd_desc.c
firmware/exam/EX-09-USB-CDC/src/lib/ST/STM32_USB_Device_Library/: LICENSE.md
firmware/stm32mp135-ddr/: CMakeLists.txt
firmware/stm32mp135-ddr/src/ap/: ap.c
firmware/stm32mp135-ddr/src/bsp/device/: stm32mp13xx_hal_conf.h
firmware/stm32mp135-ddr/src/hw/: hw.c  hw_def.h
firmware/stm32mp135-ddr/src/hw/driver/: ddr.c  pmic.c
firmware/stm32mp135-fw/: CMakeLists.txt
firmware/stm32mp135-fw/src/ap/: ap.c
firmware/stm32mp135-fw/src/bsp/: bsp.c  bsp.h
firmware/stm32mp135-fw/src/bsp/device/: stm32mp13xx_hal_conf.h
firmware/stm32mp135-fw/src/bsp/ldscript/: STM32MP135FAFX_DDR.ld  STM32MP135FAFX_RAM.ld  STM32WB55RG_FLASH.ld
firmware/stm32mp135-fw/src/hw/: hw.c  hw.h  hw_def.h
firmware/stm32mp135-fw/src/hw/driver/: ddr.c  gpio.c  i2c.c  lcd.c  led.c  log.c  ltdc.c  lvgl.c  pmic.c  resize.c  sd.c  uart.c
firmware/stm32mp135-fw/tools/flash/: README.rst  flash.tsv  flash2.tsv
firmware/stm32mp135-fw/tools/flash-sd/: flash-fsbl.tsv
firmware/stm32mp135-fw/tools/image/: stm32_imgtool.py
(+284 files in other folders)
